--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,6 @@
  header -->
 
 <header id="header" class="header default">
-
   <div class="menu">
     <!-- menu start -->
      <nav id="menu" class="mega-menu">
@@ -75,7 +74,7 @@
               <!-- menu logo -->
               <ul class="menu-logo">
                 <li>
-                  <a href="index.html"><img id="logo_img" src="images/logo-03.png" alt="logo"> </a>
+                  <a href="index.html"><img id="logo_img" src="images/logo-06.png" alt="logo"> </a>
                 </li>
               </ul>
               <!-- menu links -->
@@ -83,23 +82,26 @@
                 <ul class="menu-links">
                   <li><a href="index.html">Inicio </a>
                   </li>
-                  <li><a class="btn disabled">Noticias </a>
+                  <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
+                       <!-- drop down multilevel  -->
+                    <ul class="drop-down-multilevel">
+                      <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
+                      <li><a href="service-marketing.html"><i class="fa fa-search"></i> Marketing </a></li>
+                      <li><a href="service-design.html"><i class="fa fa-paint-brush"></i>Diseño Gráfico </a></li>
+                      <li><a href="service-content.html"><i class="fa fa-play-circle"></i> Contenidos digitales </a></li>
+                      <li class="divider"></li>
+                      <li><a href="service-advisory.html"><i class="fa fa-handshake-o"></i> Asesoría  </a></li>
+                      <li><a href="service-management.html"><i class="fa fa-list-ol"></i> Gestion de proyectos  </a></li>
+                      <li class="divider"></li>
+                    </ul>
                   </li>
                   <li><a href="about.html">Nosotros </a>
                   </li>
-                  <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
+                  <li><a class="btn disabled" href="news.html">Noticias </a>
                   </li>
-                  <!-- <li><a href="javascript:void(0)">Trabajo a distancia <i class="fa fa-angle-down fa-indicator"></i></a>
-                      <div class="drop-down">
-                        <ul>
-                          <li><a href="contact-05.html">Herramientas recomendadas </a></li>
-                          <li><a href="faqs-01.html">Algunos consejos  </a></li>
-                          <li><a href="faqs-02.html">Entorno digital </a></li>
-                        </ul>
-                      </div>
-                  </li> -->
-                  <li><a class="active" href="blog.html">Blog </a>
+                  <li><a class="btn" href="blog.html" disabled> Tips & Consejos </a>
                   </li>
+                  
                 </ul>
                 <div class="search-cart">
                   <div class="search">
@@ -132,10 +134,7 @@
   <div class="container">
     <div class="row">
      <div class="col-lg-12">
-      <div class="page-title-name">
-          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
-          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
-        </div>
+      
         <ul class="page-breadcrumb">
           <li><a href="#"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
           <li><a href="#">blog</a></li>
