--- a/news.html
+++ b/news.html
@@ -37,6 +37,12 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- marketing -->
+<link rel="stylesheet" type="text/css" href="demo-categories/marketing/css/marketing.css" />
+
+<!-- cafe -->
+<link rel="stylesheet" type="text/css" href="demo-categories/conference/css/conference.css" />
+
 <!-- LCD Style -->
 <link rel="stylesheet" type="text/css" href="css/lcd.css" />
 
@@ -130,41 +136,48 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/14.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="page-title-name">
-          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
-          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
-        </div>
-     </div>
-  </div>
- </div>
-</section>
-
-<section class="page-section-ptb" style="padding: 180px 0;">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12">
-        <div class="search-no-result text-left text-sm-center clearfix position-relative">
-          <div class="bg-title">
-            <h2>Muy pronto</h2>
+<section class="slider-parallax marketing-banner bg-overlay-black-70 parallax" style="background: url(images/bg/011.jpg);">
+  <div class="slider-content-middle">
+    <div class="container">
+      <div class="row">
+       <div class="col-lg-12 col-md-12">
+          <div class="text-center">
+              <i class="fa fa-cog fa-spin fa-3x fa-fw margin-bottom"></i>
+              <h2 class="theme-color mb-50">Muy pronto</h2>
+              <h4 class="theme-color mb-50">Esta sección está actualmente en desarrollo</h4>
           </div>
-          <div class="search-contant d-inline-block position-relative mt-20 mt-sm-0">
-            <div class="search-icon text-center position-relative theme-color">
-              <i class="fa fa-rocket"></i>
+          <div class="progress-new">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+          </div>
+           <div class="maintenance-form text-center mt-40 clearfix">
+             <p class="mb-20">Provide your email address & we will notify you when site is ready:</p>
+            <div id="mc_embed_signup_scroll">
+            <form action="php/mailchimp-action.php" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">
+             <div id="msg"> </div>
+              <div id="mc_embed_signup_scroll_2">
+                <input id="mce-EMAIL" class="form-control" type="text" placeholder="Email address" name="email1" value="">
+              </div>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                    <input type="text" name="b_b7ef45306f8b17781aa5ae58a_6b09f39a55" tabindex="-1" value="">
+                </div>
+                <div class="clear">
+                  <button type="submit" name="submitbtn" id="mc-embedded-subscribe" class="button mt-20 form-button">  Get notified </button>
+                </div>
+              </form>
             </div>
-            <h2 class="theme-color">Sección en desarollo</h2>
-            <p class="lcd-p">Estamos trabajando para poder brindar noticias te tecnología cada día</p>
-          </div>
-        </div>
+         </div>
       </div>
+    </div>
     </div>
   </div>
 </section>
 
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
+
+<section class="theme-bg page-section-ptb">
    <div class="container">
        <div class="row">
          <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
