--- a/service-marketing.html
+++ b/service-marketing.html
@@ -37,6 +37,9 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- marketing -->
+<link rel="stylesheet" type="text/css" href="demo-categories/marketing/css/marketing.css" />
+
 <!-- LCD Style -->
 <link rel="stylesheet" type="text/css" href="css/lcd.css" />
 
@@ -127,206 +130,72 @@
 <!--=================================
  header -->
 
-<!--=================================
- rev-slider -->
-
-<section class="slider-parallax business-banner-02 bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/3.png);">
-  <div class="slider-content-middle">
-   <div class="container">
-     <div class="row">
-        <div class="col-lg-6 align-self-center">
-         <div class="slider-content">
-            <h5 class="text-white mb-15">Use a past defeat as a motivator</h5>
-            <h1 class="text-white mb-30">The first thing to remember about success is that.</h1>
-            <p class="text-white">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots.</p>
-          </div>
+<section class="page-section-pt bg-overlay-black-70 parallax" style="background-image: url(images/bg/17.jpg);">
+ <div class="container">
+    <div class="row justify-content-center">
+       <div class="col-md-9">
+        <div class="play-video-section text-center">
+           <div class="content mt-60">
+             <h2 class="text-white mb-20">Cultivamos la identidad y presencia digital estratégica de tu marca</h2>
+              <h5 class="text-white mb-60"><i>Hacemos que tu marca impacte en el mercado</i></h5>
+              <img class="img-fluid mx-auto" src="images/objects/mac-book.png" alt="">
+           </div>
          </div>
-         <div class="col-lg-5 offset-1 align-self-center">
-           <img class="col-12" src="images/marketing/mkt.png">
-         </div>
-        </div>
-     </div>
-  </div>
-</section>
-
-
-<section class="page-section bg-dark text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center mt-50">
-            <h2>Impulsa tu negocio con presencia e identidad digital</h2>
-          </div>
-          <h6 class="col-10 offset-1 text-center text-white">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots</h6>
-       </div>
-       <div class="text-center col-12 mt-40 pb-50">
-          <a class="button button-border white" href="#">Ver más</a>
        </div>
     </div>
-    
+ </div>
+</section>
+
+<section class="action-box theme-bg bg-dark full-width">
+  <div class="container">
+    <div class="row">
+     <div class="col-lg-12 col-md-12">
+        <div class="action-box-text">
+         <h3 class="text-white">Toma decisiones en base a datos y estadísticas.</h3>
+         <p class="text-white">Hacemos <span class="theme-bg text-dark bold">páginas webs</span> que impactan, posicionan, potencian e impulsan marcas y negocios.</p>
+         </div>
+         <div class="action-box-button">
+        <a class="button bg-lcd" href="#">
+          <span class="">Más información</span>
+       </a>
+       </div>
+    </div>
+  </div>
   </div>
 </section>
 
-<section class="page-section-ptb">
+<section class="marketing-step gray-bg page-section-ptb">
   <div class="container">
-    <div class="row justify-content-center">
+  <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="section-title text-center">
-          <h6>Nuestros servicios </h6>
-          <h2 class="title-effect">Lo que hacemos de Marketing</h2>
-          <p>We'll do everything we can to make our next best project!</p>
-        </div>
+            <h2 class="title">Powerful  <span class="theme-bg"> marketing ideas </span> </h2>
+            <p>Generate more enquiries, convert more sales and retain more of your customers by using proven and powerful marketing ideas. </p>
+          </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6 col-sm-6 mb-30 ">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-           <span class="ti-layers-alt theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Many Style Available</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-sm-6 mb-30 ">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-           <span class="ti-headphone theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Fast Customer support</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-sm-6 mb-30 ">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-           <span class="ti-layers-alt theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Many Style Available</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-sm-6 mb-30 ">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-           <span class="ti-headphone theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Fast Customer support</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>  
-      <div class="col-lg-6 col-sm-6 xs-mb-30">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-            <span class="ti-desktop theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Our company</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-sm-6">
-        <div class="media border p-4">
-          <div class="feature-icon media-icon mr-4">
-            <span class="ti-settings theme-color"></span>
-          </div>
-          <div class="media-body">
-            <h5 class="text-back">Customizability</h5>
-            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="gray-bg">
-  <div class="container">
-    <div class="row d-flex">
-      <div class="col-5">
-        <img class="col-12" src="images/marketing/mkt.png">
-      </div>
-      <div class="col-6">
-        <div class="slider-content pt-90">
-            <h5 class="text-dark mb-15">Use a past defeat as a motivator</h5>
-            <h1 class="text-dark mb-30">The first thing to remember about success is that.</h1>
-            <p class="text-dark">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots.</p>
-          </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class=" contact-2 clearfix o-hidden">
-  <div class="container d-flex">
-  <div class="col-12 col-md-4">
-    <div class="row">
-      <div class="col-12">
-      <div class="contact-3-info page-section-ptb">
-       <div class="clearfix">
-          <h6 class="text-dark">Impulsa tu proyecto</h6>
-          <h2 class="text-dark">Contact Info</h2>
-          <br>
-
-          <ul class="addresss-info list-unstyled">
-            <li><i class="ti-map-alt text-dark"></i> <p class="text-dark">Address: 17504 Carlton Cuevas Rd, Gulfport, MS, 39503</p> </li>
-            <li><i class="ti-mobile text-dark"></i><p class="text-dark">Phone: +(704) 279-1249</p></li>
-            <li><i class="ti-email text-dark"></i><p class="text-dark">Email: letstalk@webster.com</p></li>
-          </ul>
-          <div class="social-icons social-border rounded color-hover mt-50">
-                <ul>
-                  <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li class="social-vimeo"><a href="#"><i class="fa fa-instagram"></i> </a></li>
-                  <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
-                  <li class="social-dribbble"><a href="#"><i class="fa fa-youtube"></i> </a></li>
-                  <li class="social-linkedin"><a href="#"><i class="fab fa-chrome"></i> </a></li>
-                </ul>
-             </div>
-            </div>
+       <div class="col-lg-3 col-sm-6 sm-mb-50 mx-auto">
+         <div class="step-box bg-overlay-black-30" style="background: url(demo-categories/marketing/images/blog/05.jpg); background-size: cover;">
+           <h4 class="text-white">Atrae</h4>
          </div>
-      </div>
+       </div>
+       <div class="col-lg-3 col-sm-6 sm-mb-50 mx-auto">
+         <div class="step-box bg-overlay-black-30" style="background: url(demo-categories/marketing/images/blog/02.jpg); background-size: cover;">
+           <h4 class="text-white">Convierte </h4>
+         </div>
+       </div>
+       <div class="col-lg-3 col-sm-6 xs-mb-30">
+         <div class="step-box bg-overlay-black-30" style="background: url(demo-categories/marketing/images/blog/03.jpg); background-size: cover;">
+           <h4 class="text-white">Fideliza </h4>
+         </div>
+       </div>
+       <div class="col-lg-3 col-sm-6">
+         <div class="step-box bg-overlay-black-30" style="background: url(demo-categories/marketing/images/blog/04.jpg); background-size: cover;">
+           <h4 class="text-white">Aumenta </h4>
+         </div>
+       </div>
     </div>
-  </div>
-  <div class="pos-r col-12 col-md-7 offset-1 mt-90">
-    <div class="row">
-      <div class="" id="map" data-type='black'>
-              <div class="col-12">
-              <div id="formmessage">Success/Error Message Goes Here</div>
-               <form id="contactform" role="form" method="post" action="php/contact-form.php">
-                <div class="contact-form clearfix">
-                   <div class="section-field">
-                     <input id="name" type="text" placeholder="Name*" class="form-control"  name="name">
-                 </div>
-                   <div class="section-field">
-                     <input type="email" placeholder="Email*" class="form-control" name="email">
-                  </div>
-                    <div class="section-field">
-                      <input type="text" placeholder="Phone*" class="form-control" name="phone">
-                  </div>
-                     <div class="section-field textarea">
-                       <textarea class="form-control input-message" placeholder="Comment*" rows="7" name="message"></textarea>
-                     </div>
-                   <div class="section-field submit-button">
-                     <input type="hidden" name="action" value="sendEmail"/>
-                     <button id="submit" name="submit" type="submit" value="Send" class="button button-border black"> Enviar mensaje </button>
-                   </div>
-                  </div>
-                  </form>
-                <div id="ajaxloader" style="display:none"><img class="mx-auto mt-30 mb-30 d-block" src="images/pre-loader/loader-02.svg" alt=""></div>
-             </div>
-      </div>
-    </div>
-  </div>
   </div>
 </section>
 
