--- a/services.html
+++ b/services.html
@@ -37,6 +37,12 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- marketing -->
+<link rel="stylesheet" type="text/css" href="demo-categories/marketing/css/marketing.css" />
+
+<!-- cafe -->
+<link rel="stylesheet" type="text/css" href="demo-categories/conference/css/conference.css" />
+
 <!-- LCD Style -->
 <link rel="stylesheet" type="text/css" href="css/lcd.css" />
 
@@ -86,9 +92,9 @@
                        <!-- drop down multilevel  -->
                     <ul class="drop-down-multilevel">
                       <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
+                      <li><a href="service-marketing.html"><i class="fa fa-search"></i> Marketing </a></li>
                       <li><a href="service-design.html"><i class="fa fa-paint-brush"></i>Diseño Gráfico </a></li>
-                      <li><a href="service-marketing.html"><i class="fa fa-search"></i> Marketing Digital </a></li>
-                      <li><a href="service-content.html"><i class="fa fa-play-circle"></i> Estrategias de Contenidos </a></li>
+                      <li><a href="service-content.html"><i class="fa fa-play-circle"></i> Contenidos digitales </a></li>
                       <li class="divider"></li>
                       <li><a href="service-advisory.html"><i class="fa fa-handshake-o"></i> Asesoría  </a></li>
                       <li><a href="service-management.html"><i class="fa fa-list-ol"></i> Gestion de proyectos  </a></li>
@@ -97,9 +103,9 @@
                   </li>
                   <li><a href="about.html">Nosotros </a>
                   </li>
-                  <li><a href="news.html">Noticias </a>
+                  <li><a class="btn disabled" href="news.html">Noticias </a>
                   </li>
-                  <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
+                  <li><a class="btn" href="blog.html" disabled> Tips & Consejos </a>
                   </li>
                   
                 </ul>
@@ -127,26 +133,198 @@
 <!--=================================
  header -->
 
-<!--=================================
- rev-slider -->
-
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/14.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="page-title-name">
-          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
-          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
+<section class="slider-parallax marketing-banner bg-overlay-black-70 parallax" style="background: url(images/bg/011.jpg);">
+  <div class="slider-content-middle">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-5 align-self-center text-right">
+          <p class="text-white">
+            Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto.
+          </p>
         </div>
-     </div>
+
+        <div class="col-lg-5 col-md-5 align-self-center">
+          <div class="slider-content">
+            <h1 class="text-white mt-20">Te ayudamos a mejorar tu vida con tecnología</h1>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
- </div>
+</section>
+
+<!--=================================
+ banner -->
+
+
+<!--=================================
+ tab -->
+
+
+<section class="page-section-ptb bg-dark">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="section-title text-center">
+            <h2 class="title text-white">Nuestros  <span class="theme-bg text-dark">servicios digitales </span> </h2>
+            <p class="text-gray">Somos especialistas en idear e implementar soluciones digitales de todo tipo.</p>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Desarrollo Web</h5>
+            <p class="mb-0 text-white">
+              Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-headphone theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Marketing</h5>
+            <p class="mb-0 text-white">Estudiamos el contexto de tu marca para posicionarla en el mercado y detectar tendencias entre los consumidores.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Diseño Gráfico</h5>
+            <p class="mb-0 text-white">Diseñamos en distintos formatos para construir los mensajes de tu marca o negocio y su presencia en medios digitales.</p>
+          </div>
+        </div>
+      </div> 
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Contenidos</h5>
+            <p class="mb-0 text-white">Creamos buenas piezas de contenido digital para comunicar de manera efectiva, atraer usuarios e influir en el mercado</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-headphone theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Asesoría</h5>
+            <p class="mb-0 text-white"></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-white">Gestión de proyectos</h5>
+            <p class="mb-0 text-white">Mejorando la comunicación, digitalización, optimización de procesos y aplicación de herramientas digitales.</p>
+          </div>
+        </div>
+      </div> 
+    </div>
+  </div>
 </section>
 
 
 
+<!-- <section class="page-section-ptb bg-gray" >
+  <div class="container">
+  <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="section-title text-center">
+            <h2 class="title text-dark">Nuestras  <span class="theme-bg text-white">redes sociales </span> </h2>
+            <p class="text-gray">Seguinos para estar a tanto de nuestros contenidos </p>
+          </div>
+      </div>
+    </div>
+   <div class="row">
+     <div class="col-lg-6">
+        <p class="text-dark lead">Proin gravida nibh vel velit auctor alique consectetur adipisicing elit. Accusamus sapiente vel aliquam sequi eum, fugiat perspiciatis deleniti</p>
+        <p class="pt-20 text-dark"> <span class="dropcap square dropcap-border">A</span>liquam provident, apiente lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus sapiente vel aliquam sequi eum, fugiat perspiciatis deleniti explicabo ea! Odio magni architecto ullam ea accusamus culpa explicabo
+        <div class="row mt-30">
+          <div class="col-sm-6 col-xs-6 col-xx-12">
+            <ul class="list list-unstyled list-hand">
+              <li class="text-dark">  Award-winning design</li>
+              <li class="text-dark">  Super Fast Customer support </li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-xs-6 col-xx-12">
+            <ul class="list list-unstyled list-hand">
+              <li class="text-dark">  Easy to Customize pages</li>
+              <li class="text-dark">  Powerful Performance </li>
+            </ul>
+          </div>
+         </div>
+    </div>
+    <div class="col-lg-6 sm-mt-30">
+     <video class="video" style="width: 100%;" poster="video/video.jpg" preload="auto" controls="controls">
+             <source src="video/video.mp4" type="video/mp4">
+             <source src="video/video.webm" type="video/webm">
+             <source src="video/video.ogv" type="video/ogg">
+       </video>
+    </div>
+   </div>
+  </div>
+</section> -->
 
-<footer class="footer page-section-pt black-bg">
+ <section class="conference-video page-section-ptb conference-gradient-overlay parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/bg2.png);">
+    <div class="container">
+    <div class="row">
+       <div class="col-md-12 text-center mt-100 mb-100">
+         <div class="text-center mb-50">
+              <h6 class="text-white">Aliquam erat volutpat interdum </h6>
+              <h3 class="text-white">Get ready to start your exciting journey. Our agency will lead you through the amazing digital world </h3>
+            </div>
+             <div class="popup-video popup-gallery">
+                <a class="popup-youtube" href="https://www.youtube.com/watch?v=LgvseYYhqU0"> <i class="fa fa-play"></i> </a>
+            </div>
+       </div>
+    </div>
+    </div>
+</section>
+
+<section class="action-box theme-bg bg-white full-width">
+  <div class="container">
+    <div class="row">
+     <div class="col-lg-12 col-md-12">
+        <div class="action-box-text">
+         <h3 class="text-dark">Tu proyecto web a medida</h3>
+         <p class="text-dark">Hacemos <span class="theme-bg text-dark bold">páginas webs</span> que impactan, posicionan, potencian e impulsan marcas y negocios.</p>
+         </div>
+         <div class="action-box-button">
+        <a class="button bg-lcd" href="#">
+          <span class="">Más información</span>
+       </a>
+       </div>
+    </div>
+  </div>
+  </div>
+</section>
+
+
+<footer class="footer page-section-pt bg-dark">
  <div class="container">
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
